CSS: Fix underscore and clear authorship icon alignment

--- a/src/static/css/pad/icons.css
+++ b/src/static/css/pad/icons.css
@@ -55,9 +55,6 @@
 }
 .buttonicon-clearauthorship:before {
   content: "\e843";
-  left: -9px;
-  position: absolute;
-  top: -9px;
 }
 .buttonicon-settings:before {
   content: "\e851";
@@ -87,9 +84,9 @@
 .ep_font_color .buttonicon:before { content: '\e84e' !important; border-bottom: solid 2px #e42a2a;  }
 
 .buttonicon-underline:before {
-  top: -8px;
-  left: -8px;
-  position: absolute;
+  /* The baseline of the underscore glyph seems off. Compensate for it here. */
+  top: 0.1em;
+  position: relative;
 }
 
 /* COPY CSS GENERATED BY FONTELLO HERE */
